examples/invalid/not_declared/chord_type1.vbr
moderato() {
    a: A <-> b.x|
}